==================
- Fixed missing universe domain in Reference File Viewer.
- Fixed selection of the default encoding.
- Fixed dialog waiting for printer connection during Studio startup.
- The encodings dialog starts with only a few encodings pre-selected.
- When starting on a system with reduced available encodings, the users selection is protected.
- Fixed Reset function in encodings dialog.

Version 1.20.2
==================
- Added an entry to clear the errors of the current project, to the context menu of the line numbers.
- Fixed state of the `Apply` button, when the `Update` settings have changed.
- Fixed the settings information `Last check date`, when checking for updates has been executed.
- Improved the text context menu entries for removing file(s) or project(s) listed in the Project View.
- Improved information message when the International Components for Unicode (ICU) support is missing.

Version 1.20.1
==================
- Fixed missing font update from changes in the Settings Dialog.
- Fixed Workspace cleanup Settings when Studio starts.
- Moved the list of files to be deleted to the details view when cleaning up workspace on startup.
- Dropped support for openSUSE Leap 15.6.
- Added support for Fedora 41 and Ubuntu 24.04 LTS.
- A GAMS Engine run from Studio can now select pool instances, too.
- A GAMS Engine pool instance can be scaled up and down from within Studio.

Version 1.20.0
==================
- Added fonts JetBrains Mono, Source Code Pro, Fira Code, and Cousine.
- Added a new `Workspace` tab to the settings, including the clean-up workspace configuration. Furthermore, the default settings value `Number of log backup files` has been changed from `3` to `0`.
- Added JetBrains Mono as default font for text editors. The font can be switched back to the default font in Settings (F7) in the "Editor & Log" tab.
- Fixed that the current project changes after using 'Save as...'.