@@ -6,6 +6,7 @@ Version 1.20.3 *
 - The encodings dialog starts with only a few encodings pre-selected.
 - When starting on a system with reduced available encodings, the users selection is protected.
 - Fixed Reset function in encodings dialog.
+- Block backspace in Blockedit when the cursors are in the first column.
 
 Version 1.20.2
 ==================
